# personal_cli_assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: __init__.py  main.py
src/agent/: __init__.py  core.py  history.py  memory.py  prompt.py
src/cli/: __init__.py  commands.py  interface.py  themes.py
src/llm/: __init__.py  base.py  ollama.py
src/tools/: __init__.py  base.py  calculator.py  dispatcher.py  file_ops.py  schemas.py  system_info.py  weather.py  web_search.py
src/utils/: __init__.py  config.py  exceptions.py  logger.py
tests/: __init__.py
tests/test_tools/: test_calculator.py
